--- a/landing page/index.html
+++ b/landing page/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Compartilhamos atualidades da forma mais prática e dinâmica possível">
     <title> Daily Newsletter - Seu jornal digital favorito </title>
     <link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="shortcut icon" href="images/image 1.png" type="image/x-icon" />
 </head>
 <body>
     <header class="cabecalho">
