--- a/landing page/index.html
+++ b/landing page/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"> 
     <link rel="shortcut icon" href="images/image 1.png" type="image/x-icon"/>
 </head>
+
 <body>
     <header class="cabecalho">
         <img class="imagem-cabecalho" src="images/image 1.png" alt="logo da Daily Newsletter" title="Daily Newsletter"/>
@@ -19,24 +21,26 @@
                 <a class="menu-item">Cadastre-se</a>
             </nav>
     </header>
-    <main class="conteudo"> 
 
+    <main class="conteudo"> 
       <section class="conteudo1"> 
           <div class="conteudo11"> 
               <h1 class="titulo-conteudo11">Daily Newsletter</h1>
               <h2 class="subtitulo-conteudo11">O seu jornal digital favorito</h2>
               <button class="botao-conteudo11">Assine agora</button>
           </div>
-    <img src="images/cafee.png" alt="café" title="Pegue seu cafézinho e ASSINE JÁ" class="imagem-conteudo11"> 
+        <img src="images/cafee.png" alt="café" title="Daily Newsletter" class="imagem-conteudo11"> 
         </section>
-
     <section class="conteudo2"> 
         <p class="texto-conteudo2">Compartilhamos atualidades da forma mais <strong>prática</strong> e <strong>dinâmica</strong> possível.</p>
         <p>Nossas notícias combinam com uma boa dose de cafézinho :)</p>
     </section>
+    </main>
 
 <footer class="rodape">
     <img class="logo-rodape" src="images/image-removebg-preview (32).png" alt="logo do Daily Newsletter" title="Daily Newsletter">
 </footer>
+
 </body>
+
 </html>
