--- a/landing page/index.html
+++ b/landing page/index.html
@@ -38,7 +38,7 @@
     </main>
 
 <footer class="rodape">
-    <img class="logo-rodape" src="images/image-removebg-preview (32).png" alt="logo do Daily Newsletter" title="Daily Newsletter">
+    <img class="logo-rodape" src="images/logodaily.png" alt="logo do Daily Newsletter" title="Daily Newsletter">
 </footer>
 
 </body>
