--- a/landing page/index.html
+++ b/landing page/index.html
@@ -35,11 +35,31 @@
         <p class="texto-conteudo2">Compartilhamos atualidades da forma mais <strong>prática</strong> e <strong>dinâmica</strong> possível.</p>
         <p>Nossas notícias combinam com uma boa dose de cafézinho :)</p>
     </section>
+
+    <section class="conteudo3">
+        <h1 class="titulo_faq"> FAQ <sub>Frequently Asked Questions</sub></h1>
+            <details class="itemfaq"> 
+                <summary>Como recebo as notícias?</summary>
+                <p>Ao assinar nosso jornal diário, as notícias chegarão ao e-mail conectado à sua conta de cadastro todos os dias às 7 da manhã.</p>
+            </details>
+            <details class="itemfaq">
+                <summary>Se não gostar do serviço, tenho reembolso?</summary>
+                    <p> Sim! Caso o assinante não esteja satisfeito, pode acessar a aba de configurações de sua conta e cancelar o plano.</p>
+            </details>
+            <details class="itemfaq">
+                <summary>Como faço para assinar?</summary>
+                    <p>Para assinar nosso plano, acesse nossa <a href="index.html">Página Principal</a> e clique no botão "Assine agora".</p>
+            </details>
+            <details class="itemfaq">
+                <summary>Quanto custa o plano?</summary>
+                    <p>O plano custa 27,00 reais mensais.</p>
+            </details>
+    </section>
     </main>
 
-<footer class="rodape">
-    <img class="logo-rodape" src="images/logodaily.png" alt="logo do Daily Newsletter" title="Daily Newsletter">
-</footer>
+    <footer class="rodape">
+        <img class="logo-rodape" src="images/logodaily.png" alt="logo do Daily Newsletter" title="Daily Newsletter">
+    </footer>
 
 </body>
 
