--- a/landing page/index.html
+++ b/landing page/index.html
@@ -37,22 +37,22 @@
     </section>
 
     <section class="conteudo3">
-        <h1 class="titulo_faq"> FAQ <sub>Frequently Asked Questions</sub></h1>
+        <p class="titulo_faq"> FAQ - Perguntas frequentes</p> 
             <details class="itemfaq"> 
-                <summary>Como recebo as notícias?</summary>
-                <p>Ao assinar nosso jornal diário, as notícias chegarão ao e-mail conectado à sua conta de cadastro todos os dias às 7 da manhã.</p>
+                <summary class="itemtit">Como recebo as notícias?</summary>
+                <p class="itemcont">Ao assinar nosso jornal diário, as notícias chegarão ao e-mail conectado à sua conta de cadastro todos os dias às 7 da manhã.</p>
             </details>
             <details class="itemfaq">
-                <summary>Se não gostar do serviço, tenho reembolso?</summary>
-                    <p> Sim! Caso o assinante não esteja satisfeito, pode acessar a aba de configurações de sua conta e cancelar o plano.</p>
+                <summary class="itemtit">Se não gostar do serviço, tenho reembolso?</summary>
+                    <p class="itemcont"> Sim! Caso o assinante não esteja satisfeito, pode acessar a aba de configurações de sua conta e cancelar o plano.</p>
             </details>
             <details class="itemfaq">
-                <summary>Como faço para assinar?</summary>
-                    <p>Para assinar nosso plano, acesse nossa <a href="index.html">Página Principal</a> e clique no botão "Assine agora".</p>
+                <summary class="itemtit">Como faço para assinar?</summary>
+                    <p class="itemcont">Para assinar nosso plano, acesse nossa <a href="index.html">Página Principal</a> e clique no botão "Assine agora".</p>
             </details>
             <details class="itemfaq">
-                <summary>Quanto custa o plano?</summary>
-                    <p>O plano custa 27,00 reais mensais.</p>
+                <summary class="itemtit">Quanto custa o plano?</summary>
+                    <p class="itemcont">O plano custa 27,00 reais mensais.</p>
             </details>
     </section>
     </main>
