--- a/landing page/index.html
+++ b/landing page/index.html
@@ -17,7 +17,7 @@
             <nav class="menu-cabecalho">
                 <a class="menu-item">Contate-nos</a>
                 <a class="menu-item">Principais notícias</a>
-                <a class="menu-item">FAQ</a>
+                <a href="#faq" class="menu-item">FAQ</a>
                 <a class="menu-item">Cadastre-se</a>
             </nav>
     </header>
@@ -37,7 +37,7 @@
     </section>
 
     <section class="conteudo3">
-        <p class="titulo_faq"> FAQ - Perguntas frequentes</p> 
+        <p id="faq" class="titulo_faq"> FAQ - Perguntas frequentes</p> 
             <details class="itemfaq"> 
                 <summary class="itemtit">Como recebo as notícias?</summary>
                 <p class="itemcont">Ao assinar nosso jornal diário, as notícias chegarão ao e-mail conectado à sua conta de cadastro todos os dias às 7 da manhã.</p>
